--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div>
           <img
-            src="./assets/images/avatar-jessica.jpeg"
+            src="./images/avatar-jessica.jpeg"
             alt="black young female"
           />
           <h1>Jessica Randall</h1>
