--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
         </div>
       </div>
     </main>
+    <footer>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Anita Atuba</a>.
     </div>
+    </footer>
   </body>
 </html>
